# lcat.dev

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  README.md  auth.php  config.example.php  config.php  config.py.template  contact.php  delete.php  docker-compose.yaml  edit.php  go.mod  go.sum  index.php  login.php  logout.php  package-lock.json  plans.drawio  post.php  requirements.txt  robots.txt  startup.sh  style.css  template_base.php  template_login.php  template_post_form.php  template_post_list.php  template_post_view.php  template_rss.php  templating.php  totp.php  transactions.php  urls.php  write.php  wsgi.py
.github/workflows/: codeql-analysis.yml  main.yml
app/: __init__.py  admin.py  config.py  models.py  views.py
app/static/: awsm.css  style.css
app/templates/: contact.html  home.html  macros.html  search.html  skel.html  sudo.html  view_log.html
app/utils/: filters.py
app/views/: admin.py  home.py
cmd/lcatsrv/: main.go
docs/: schema.sql
internal/config/: config.go
internal/constants/: constants.go
internal/core/: app.go
internal/front/: front.go
internal/logpost/: logpost.go
internal/posts/: posts.go
internal/templates/: templates.go
internal/views/: views.go
lcat-rs/: Cargo.toml
lcat-rs/src/: lib.rs
lcat-rs/src/templates/: base.html  post.html
migrations/versions/: 179c22e19a6f_create_log_post_table.py  ecd90d2ecd32_add_is_pinned_column_to_log_post_table.py
templates/: base.php  index.php  view_post.php
tests/: conftest.py
web/: base.html  index.html  view_post.html
(+9 files in other folders)
