[package]
name = "lcat-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
cgi = "0.8.0"
minijinja = { version = "2.11.0", features = ["json", "loader"] }
rusqlite = { version = "0.32.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }

[package.metadata.cross.build.env]
passthrough = ["LCAT_DB_FILE"]
